🐛 fix: moving marker doesn't work on mobile

--- a/packages/color-picker/src/styles/index.scss
+++ b/packages/color-picker/src/styles/index.scss
@@ -75,4 +75,8 @@
     right: 0;
     bottom: 0;
   }
+
+  &__interactive {
+    touch-action: none;
+  }
 }
